fixed video on mobile

--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -1,9 +1,14 @@
 .header {
-    position: absolute;
-    z-index: 3;
+    position: fixed;
+    z-index: 10;
     top: 10px;
     right: 20px;
     width: 100px;
+
+    @include mq(tablet) {
+        position: absolute;
+        z-index: 3;
+    }
 
     @include mq(desktop) {
         position: fixed;
